First Bonus Section add

--- a/index.html
+++ b/index.html
@@ -217,6 +217,43 @@
                 </div>
             </section>
         </article>
+        <!-- Support Section -->
+        <section class="container my-5">
+            <div class="text-center my-5">
+                <h1 class="fs-1 text text-color-blue  animate__animated animate__backInLeft">Our Support <span class="text-color-orange">Area</span></h1>
+            </div>
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="icon border border-dark rounded-3 p-4 text-center">
+                       <a href="https://skrillazlogistics.com/" target="blank"> <i class="fas  fa-shipping-fast fa-4x border rounded-circle p-5"></i></a>
+                    </div>
+                    <h3 class="my-2">Free Shipping</h3>
+                    <p> Free Shipping on all Hero Order</p>
+                </div>
+                <div class="col-lg-3">
+                    <div class="icon border border-dark rounded-3 p-4 text-center">
+                       <a href="#"> <i class="fas  fa-shield-alt fa-4x border rounded-circle p-5"></i></a>
+                    </div>
+                    <h3 class="my-2">Safe Shopping</h3>
+                    <p> Safe Shopping Guarantee</p>
+                </div>
+                <div class="col-lg-3">
+                    <div class="icon border border-dark rounded-3 p-4 text-center">
+                       <a href="#"> <i class="fas  fa-funnel-dollar fa-4x border rounded-circle p-5"></i></a>
+                    </div>
+                    <h3 class="my-2">Money Guarantee</h3>
+                    <p>30 days money back guarantee</p>
+                </div>
+                <div class="col-lg-3">
+                    <div class="icon border border-dark rounded-3 p-4 text-center">
+                       <a href="#"> <i class="fas fa-cogs fa-4x border rounded-circle p-5"></i></a>
+                       
+                    </div>
+                    <h3 class="my-2">Serviceing Support</h3>
+                    <p> We support 24hours a day</p>
+                </div>
+            </div>
+        </section>
         
     </main>
 
